k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecomsite-deployment
  namespace: ecomsite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecomsite
  template:
    metadata:
      labels:
        app: ecomsite
    spec:
      containers:
      - name: ecomsite
        image: nyapu1010/ecom-site:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
