k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-svc
spec:
  type: ClusterIP
  selector:
    app: node-app
  ports:
    - port: 8898
      targetPort: 3000
